--- a/css/styles-all.css
+++ b/css/styles-all.css
@@ -915,7 +915,7 @@ section#skills{
 
 #skills_header > h2{
    font-family: 'mySansSerif_2';
-   font-size: 5vw;
+   font-size: 5.5vw;
    letter-spacing: .1em;
    text-indent: .5em;
    color: white;
@@ -939,7 +939,6 @@ section#skills{
 
 .number{
    font-family: 'mySansSerif_2';
-   font-size: 4vw;
 }
 
 #exp_time_middle{
@@ -956,10 +955,21 @@ section#skills{
    text-shadow: .5vw .5vw 5vw rgba(255, 255, 255, 0.452);
 }
 
+#experience_time > div > p > span{
+   font-size: 4vw;
+}
+
 #courses_intro{
    font-family: 'mySansSerif_1';
+   font-size: 5vw;
    font-variant: small-caps;
    text-align: center;
+   text-shadow: .1vw .1vw 4vw rgba(255, 255, 255, 0.61);
+   padding: 7vw 0vw;
+   border-top: 1px solid var(--myred);
+   border-bottom: 1px solid var(--myred);
+   margin-top: 7vw;
+   margin-bottom: 7vw;
 }
 
 #courses_list{
@@ -970,9 +980,82 @@ section#skills{
 
 #courses_list > li{
    flex: 33%;
+   height: 33vw;
    align-items: center;
    justify-content: center;
    text-align: center;
+}
+
+#courses_list li > div{
+   width: 20vw;
+   position: relative;
+   padding: 0em .5em 1.5em .5em;
+   border: 1px solid var(--myblack);
+   border-radius: 10px;
+   border-bottom: none;
+   border-top: none;
+
+   cursor: context-menu;
+   transition: .5s ease-in-out .1s;
+}
+
+#courses_list li > div:hover{
+   background-color: var(--myblack);
+   transform: translateY(-1.9em);
+   border-radius: 20px;
+}
+
+.cursoemvideo::after, .ogroflix::after{
+   font-family: 'myCursive_1';
+   font-size: 3.3vw;
+   color: var(--myred);
+   position: absolute;
+   bottom: -1vw;
+   left: 1.2vw;
+
+   opacity: 0;
+   transition: .5s ease-out .1s;
+}
+
+.cursoemvideo::after{
+   content: 'By CursoEmVideo';
+}
+
+.ogroflix::after{
+   content: 'By Ogroflix';
+}
+
+.cursoemvideo:hover::after{
+   bottom: -4.6vw;
+   left: 1.3vw;
+
+   opacity: 1;
+}
+
+.ogroflix:hover::after{
+   bottom: -4.6vw;
+   left: 4.8vw;
+
+   opacity: 1;
+}
+
+#courses_list li > div > img{
+   height: 8vw;
+   margin-bottom: 3.5vw;
+   margin-top: 5vw;
+}
+
+#courses_list li > div > p{
+   font-family: 'mySansSerif_3';
+   font-size: 2.2vw;
+}
+
+#courses_list li > div > h3{
+   font-family: 'mySansSerif_3';
+   font-size: 2.5vw;
+   font-weight: normal;
+   color: white;
+   line-height: 2em;
 }
 
 section#skills > ul{
