projects slide effect, first website ready version
--> Porjects area with slides  transitions effect (controls and markers also added);
--> Other little changes and ajuusts, like redirect links and his receiver;
--> First version of the website ready. Not complete, but usable.

--- a/css/styles-1200min.css
+++ b/css/styles-1200min.css
@@ -43,3 +43,18 @@ div#big_big > p{
 div#seriousness > p{
    font-size: 2.5em;
 }
+
+#making_result > h3{
+   font-size: 3.8vw;
+}
+
+footer{
+   height: calc(2vw + 3em);
+}
+
+footer > p{
+   font-size: 1.2vw;
+}
+footer > p > b{
+   font-size: 1.2vw;
+}
